Fix responsive video display on mobile devices using media queries

--- a/css/style.css
+++ b/css/style.css
@@ -412,6 +412,9 @@ a {
         padding: 15px 10%;
         font-size: 1rem;
     }
+    .work-video iframe {
+        min-height: 300px; 
+    }
 
 }
 
